Change CSS to fix layout issues

--- a/app/assets/stylesheets/atoms.scss
+++ b/app/assets/stylesheets/atoms.scss
@@ -16,7 +16,16 @@
 
 .container {
   max-width: 1280px;
-  width: 100%;
+  // width: 100%;
   margin: 0 auto;
   padding: 2% 5%;
+}
+.navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+}
+.navleft {
+  flex-grow: 1;
 }
