--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -44,6 +44,10 @@
   li {
     margin-right: 28px;
   }
+
+  > a {
+    margin-right: 28px
+  }
 }
 
 #admin-header {
